--- a/index.html
+++ b/index.html
@@ -53,137 +53,153 @@
     <!-- main-content -->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Studio -->
 
       <section class="our-studio">
-        <h2 class="studio-title">Studio</h2>
-        <ul class="studio-list">
-          <li class="studio-item">
-            <h3 class="studio-item-title">Strategy</h3>
-            <p class="item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-item-title">Punctuality</h3>
-            <p class="item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-item-title">Diligence</h3>
-            <p class="item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="studio-item">
-            <h3 class="studio-item-title">Technologies</h3>
-            <p class="item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="studio-title">Studio</h2>
+          <ul class="studio-list">
+            <li class="studio-item">
+              <h3 class="studio-item-title">Strategy</h3>
+              <p class="item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-item-title">Punctuality</h3>
+              <p class="item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-item-title">Diligence</h3>
+              <p class="item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="studio-item">
+              <h3 class="studio-item-title">Technologies</h3>
+              <p class="item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Team -->
       <section class="our-team">
-        <h2 class="our-team-title">Our Team</h2>
-        <ul class="our-team-list">
-          <li class="our-team-item">
-            <img
-              src="./images/product_designer.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="our-team-names">Mark Guerrero</h3>
-            <p class="our-team-positions">Product Designer</p>
-          </li>
-          <li class="our-team-item">
-            <img
-              src="./images/frontend_developer.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
-            <h3 class="our-team-names">Tom Ford</h3>
-            <p class="our-team-positions">Frontend Developer</p>
-          </li>
-          <li class="our-team-item">
-            <img src="./images/marketing.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="our-team-names">Camila Garcia</h3>
-            <p class="our-team-positions">Marketing</p>
-          </li>
-          <li class="our-team-item">
-            <img
-              src="./images/ui_designer.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="our-team-names">Daniel Wilson</h3>
-            <p class="our-team-positions">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team-title">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                src="./images/product_designer.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="our-team-names">Mark Guerrero</h3>
+              <p class="our-team-positions">Product Designer</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/frontend_developer.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <h3 class="our-team-names">Tom Ford</h3>
+              <p class="our-team-positions">Frontend Developer</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/marketing.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="our-team-names">Camila Garcia</h3>
+              <p class="our-team-positions">Marketing</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/ui_designer.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="our-team-names">Daniel Wilson</h3>
+              <p class="our-team-positions">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Portfolio -->
       <section class="our-portfolio">
-        <h2 class="our-portfolio-title">Our Portfolio</h2>
-        <ul class="our-portfolio-list">
-          <li class="our-portfolio-item">
-            <img src="./images/banking_app.jpg" alt="Banking-app" width="360" />
-            <h3 class="portfolio-names">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="our-portfolio-item">
-            <img
-              src="./images/cashless_payment.jpg"
-              alt="Cashless-payment"
-              width="360"
-            />
-            <h3 class="portfolio-names">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="our-portfolio-item">
-            <img
-              src="./images/meditation_app.jpg"
-              alt="Meditation-app"
-              width="360"
-            />
-            <h3 class="portfolio-names">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="our-portfolio-item">
-            <img
-              src="./images/taxi_service.jpg"
-              alt="Taxi-service"
-              width="360"
-            />
-            <h3 class="portfolio-names">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="our-portfolio-item">
-            <img
-              src="./images/screen_illustrations.jpg"
-              alt="Screen-Illustrations"
-              width="360"
-            />
-            <h3 class="portfolio-names">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="our-portfolio-item">
-            <img
-              src="./images/online_courses.jpg"
-              alt="Online-courses"
-              width="360"
-            />
-            <h3 class="portfolio-names">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-portfolio-title">Our Portfolio</h2>
+          <ul class="our-portfolio-list">
+            <li class="our-portfolio-item">
+              <img
+                src="./images/banking_app.jpg"
+                alt="Banking-app"
+                width="360"
+              />
+              <h3 class="portfolio-names">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="our-portfolio-item">
+              <img
+                src="./images/cashless_payment.jpg"
+                alt="Cashless-payment"
+                width="360"
+              />
+              <h3 class="portfolio-names">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="our-portfolio-item">
+              <img
+                src="./images/meditation_app.jpg"
+                alt="Meditation-app"
+                width="360"
+              />
+              <h3 class="portfolio-names">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="our-portfolio-item">
+              <img
+                src="./images/taxi_service.jpg"
+                alt="Taxi-service"
+                width="360"
+              />
+              <h3 class="portfolio-names">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="our-portfolio-item">
+              <img
+                src="./images/screen_illustrations.jpg"
+                alt="Screen-Illustrations"
+                width="360"
+              />
+              <h3 class="portfolio-names">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="our-portfolio-item">
+              <img
+                src="./images/online_courses.jpg"
+                alt="Online-courses"
+                width="360"
+              />
+              <h3 class="portfolio-names">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
