--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="our-team-names">Mark Guerrero</h3>
-              <p class="our-team-positions">Product Designer</p>
+              <div class="our-team-card">
+                <h3 class="our-team-names">Mark Guerrero</h3>
+                <p class="our-team-positions">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -119,17 +121,22 @@
                 alt="Tom Ford"
                 width="264"
               />
-              <h3 class="our-team-names">Tom Ford</h3>
+              <div class="our-team-card">
+                <h3 class="our-team-names">Tom Ford</h3>
               <p class="our-team-positions">Frontend Developer</p>
-            </li>
+            </div class="team-card">
+                        </li>
             <li class="our-team-item">
               <img
                 src="./images/marketing.jpg"
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="our-team-names">Camila Garcia</h3>
+              <div class="our-team-card">
+                <h3 class="our-team-names">Camila Garcia</h3>
               <p class="our-team-positions">Marketing</p>
+              </div>
+              
             </li>
             <li class="our-team-item">
               <img
@@ -137,8 +144,11 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="our-team-names">Daniel Wilson</h3>
+              <div class="our-team-card">
+                <h3 class="our-team-names">Daniel Wilson</h3>
               <p class="our-team-positions">UI Designer</p>
+              </div>
+              
             </li>
           </ul>
         </div>
@@ -154,8 +164,11 @@
                 alt="Banking-app"
                 width="360"
               />
+              <div class="portfolio-card">
               <h3 class="portfolio-names">Banking App</h3>
               <p class="portfolio-text">App</p>
+              </div>
+
             </li>
             <li class="our-portfolio-item">
               <img
@@ -163,8 +176,11 @@
                 alt="Cashless-payment"
                 width="360"
               />
+              <div class="portfolio-card">
               <h3 class="portfolio-names">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
+
             </li>
             <li class="our-portfolio-item">
               <img
@@ -172,8 +188,11 @@
                 alt="Meditation-app"
                 width="360"
               />
+              <div class="portfolio-card">
               <h3 class="portfolio-names">Meditation App</h3>
               <p class="portfolio-text">App</p>
+              </div>
+
             </li>
             <li class="our-portfolio-item">
               <img
@@ -181,8 +200,11 @@
                 alt="Taxi-service"
                 width="360"
               />
+              <div class="portfolio-card">
               <h3 class="portfolio-names">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
+
             </li>
             <li class="our-portfolio-item">
               <img
@@ -190,8 +212,11 @@
                 alt="Screen-Illustrations"
                 width="360"
               />
+              <div class="portfolio-card">
               <h3 class="portfolio-names">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
+              </div>
+
             </li>
             <li class="our-portfolio-item">
               <img
@@ -199,8 +224,11 @@
                 alt="Online-courses"
                 width="360"
               />
-              <h3 class="portfolio-names">Online Courses</h3>
+              <div class="portfolio-card">
+                              <h3 class="portfolio-names">Online Courses</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
+
             </li>
           </ul>
         </div>
