--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <section class="our-studio">
         <div class="container">
-          <h2 class="visually-hidden" class="studio-title">Studio</h2>
+          <h2 class="visually-hidden studio-title">Studio</h2>
           <ul class="studio-list">
             <li class="studio-item">
               <h3 class="studio-item-title">Strategy</h3>
@@ -123,9 +123,9 @@
               />
               <div class="our-team-card">
                 <h3 class="our-team-names">Tom Ford</h3>
-              <p class="our-team-positions">Frontend Developer</p>
-            </div class="team-card">
-                        </li>
+                <p class="our-team-positions">Frontend Developer</p>
+              </div>
+            </li>
             <li class="our-team-item">
               <img
                 src="./images/marketing.jpg"
@@ -134,9 +134,8 @@
               />
               <div class="our-team-card">
                 <h3 class="our-team-names">Camila Garcia</h3>
-              <p class="our-team-positions">Marketing</p>
+                <p class="our-team-positions">Marketing</p>
               </div>
-              
             </li>
             <li class="our-team-item">
               <img
@@ -146,9 +145,8 @@
               />
               <div class="our-team-card">
                 <h3 class="our-team-names">Daniel Wilson</h3>
-              <p class="our-team-positions">UI Designer</p>
+                <p class="our-team-positions">UI Designer</p>
               </div>
-              
             </li>
           </ul>
         </div>
@@ -165,10 +163,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-              <h3 class="portfolio-names">Banking App</h3>
-              <p class="portfolio-text">App</p>
+                <h3 class="portfolio-names">Banking App</h3>
+                <p class="portfolio-text">App</p>
               </div>
-
             </li>
             <li class="our-portfolio-item">
               <img
@@ -177,10 +174,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-              <h3 class="portfolio-names">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-names">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
-
             </li>
             <li class="our-portfolio-item">
               <img
@@ -189,10 +185,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-              <h3 class="portfolio-names">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+                <h3 class="portfolio-names">Meditation App</h3>
+                <p class="portfolio-text">App</p>
               </div>
-
             </li>
             <li class="our-portfolio-item">
               <img
@@ -201,10 +196,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-              <h3 class="portfolio-names">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-names">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
-
             </li>
             <li class="our-portfolio-item">
               <img
@@ -213,10 +207,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-              <h3 class="portfolio-names">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+                <h3 class="portfolio-names">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
               </div>
-
             </li>
             <li class="our-portfolio-item">
               <img
@@ -225,10 +218,9 @@
                 width="360"
               />
               <div class="portfolio-card">
-                              <h3 class="portfolio-names">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-names">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
-
             </li>
           </ul>
         </div>
